Today I focused on Redux form validation, making it so the user can't create names are too long, values that are too high, or values that are not even numbers. I also capped the number of increments at five and made the maximum value possible (with increments included) 999999. Lastly, I spent some time brushing up the code by organizing each file and removing anything that was no longer needed.

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,8 @@
   }
 }
 
+/* My added styling */
+
 .btn-add-tracker {
   margin-bottom: 50px;
 }
@@ -49,7 +51,7 @@
   margin-top: 50px;
 }
 
-.footer {
+#footer {
   height: 100px;
 }
 
